# rpizw-rover

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile.template  LICENSE  README.md  create-image  gether  resin  rover-test.sh  setup
.cargo/: config
src/: cli.yml  error.rs  lib.rs  main.rs  rover.rs
ui/: README.md  index.html  package-lock.json  package.json
ui/config/: dev.env.js  prod.env.js  test.env.js
ui/src/: App.vue  main.js
ui/src/components/: Controls.vue  Hello.vue
ui/src/router/: index.js
ui/test/unit/specs/: Hello.spec.js
